Update README with JavaFX setup instructions
Added installation instructions and notes for JavaFX.