@@ -1,1 +1,7 @@
 # practicaF
+
+este ya esta corregido y tiene unos archivos extra
+para ejecutarlo vas al CMD y en la direccion en la que tu pc tenga la carpeta de "PracticaF" vas a ejecutar lo siguiente
+java --module-path "D:\ProgTools\javafx\openjfx-17.0.17_windows-x64_bin-sdk\javafx-sdk-17.0.17\lib" --add-modules javafx.controls,javafx.fxml -cp build ui.App
+
+tener en cuenta que depende tambien en donde se encuentre instalado tu javafx (en caso de no tenerlo instalado hacerlo para que funcione) dependera mucho de las locaciones de los archivos pero por lo menos la parte del codigo esta todo bien
